--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "linux"]
 	path = linux
 	url = https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git
+[submodule "opensbi"]
+	path = opensbi
+	url = https://github.com/riscv/opensbi.git
